@startuml
package com.broccolistefani.sportstracker {

    class MainActivity {
        }

        class BotMenuActivity {
        }

        class EditUserActivity {
            +editUserData()
        }

        class NewTrainingActivity {
            +saveTrainingSession()
        }

        class WelcomeActivity {
            +saveUserData()
        }

        class LoginActivity {
        }

        class TrainingSessionAdapter{
            +deleteSession()
        }

        class CalendarFragment {
            +saveCalendarTraining()
            +loadCalendarTrainingsUser()
        }

        class HomeFragment {
            +loadTrainingSessionsUser()
        }

        class MapsFragment {
            +loadAllUserTrainings()
        }

        class UserFragment {
            +loadUserData
        }

        class SessionManager {
            +isLoggedIn: Boolean
            +userName: String
            +setLogin()
            +saveProfileImageUri()
            +getProfileImageUri()
        }

        class LoginManager {
            +attemptLogin(): Boolean
            +logout()
        }

        class DB {
            +insertUser()
            +getAllTrainingsByUserId()
            +getLocationsByTrainingId()
            +insertTrainingLocation()
            +insertTrainingSession()
            +insertCalendarTraining()
            +getCalendarTrainingsUser()
            +getUserTrainingSessions()
            +deleteTrainingSession()
            +getUserData()
            +userLogin()
            +updateUser()
        }

        class User {
            +userName: String
            +password: String
        }

        class TrainingSession {
            +userName: String
            +sessionId: Int
        }

        class Location {
            +latitude: Double
            +longitude: Double
            +sessionId: Int
        }

        class CalendarTraining {
            +userName: String
            +date: String
        }

        class SharedPreferences {
            +KeyUserName
            +KeyIsLoggedIn
        }

        class SQLTable{
        }

        MainActivity --> BotMenuActivity
        MainActivity --> WelcomeActivity
        MainActivity --> SessionManager

        WelcomeActivity --> BotMenuActivity

        BotMenuActivity --> UserFragment
        BotMenuActivity --> HomeFragment
        BotMenuActivity --> MapsFragment
        BotMenuActivity --> CalendarFragment

        UserFragment --> EditUserActivity
        UserFragment --> LoginActivity
        MapsFragment --> NewTrainingActivity
        TrainingSessionAdapter --> HomeFragment

        LoginActivity --> WelcomeActivity
        LoginActivity --> LoginManager

        LoginManager --> SessionManager
        LoginManager --> DB
        SessionManager --> SharedPreferences

        SharedPreferences --> SessionManager

        DB --> SQLTable
        User --> DB
        TrainingSession --> DB
        CalendarTraining --> DB
        Location --> DB
}
@enduml